# hax

./: LICENSE  README.org  hax.cabal  makefile  stack.yaml
app/: Main.hs
demo/: makefile
demo/demo-0/: makefile
demo/demo-1/hello/generator/: pi.py
demo/demo-1/hello/include/subdir/: include.inc
demo/demo-1/hello/template/subdir_[x]/: file_[x].md
demo/demo-2/: makefile
demo/demo-2/analysis/generator/: pi.py
demo/demo-2/analysis/template/: analysis.R
demo/demo-2/analysis/template/data/: all.data
demo/demo-2/analysis/template/data/[dataset]/: [dataset].data
demo/demo-2/analysis/template/figures/: README
demo/demo-2/report/deprecated/: Extra.md
demo/demo-2/report/generator/: pi.py
demo/demo-2/report/include/: title.inc
demo/demo-2/report/template/: Report.md
demo/demo-2/simulation/generator/: pi.py
demo/demo-2/simulation/template/[dataset]/: [dataset]-[params]-[tap].csv
src/: Hax.hs
