name:                hax
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/radiganm/hax#readme
license-file:        LICENSE
author:              Mac Radigan
copyright:           2017 Mac Radigan
category:            Code Generation
build-type:          Simple
extra-source-files:  README.org
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Hax
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable hax-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hax
                     , optparse-generic >= 1.2.1
                     , stache >= 1.1.2
                     , megaparsec >= 6.1.1
                     , aeson >= 1.1.2.0
                     , text >= 1.2.2.2
                     , syb >= 0.7
                     , unix >= 2.7.2.2
                     , MissingH >= 1.3.0.1
                     , filemanip >= 0.3.6.3
                     , hint >= 0.7.0
  default-language:    Haskell2010

test-suite hax-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hax
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/radiganm/hax
